إصلاح CSP: استضافة Select2 محلياً + نظام نشر تلقائي
- تنزيل ملفات Select2 CSS/JS محلياً بدلاً من CDN
- تحديث 10 قوالب لاستخدام الملفات المحلية
- إضافة cdn.jsdelivr.net و code.jquery.com إلى CSP
- إضافة سكريبت النشر التلقائي auto_deploy.sh
- إضافة سكريبت التثبيت install_auto_deploy.sh
- إضافة توثيق AUTO_DEPLOY_SETUP.md

--- a/accounts/templates/accounts/role_assign_form.html
+++ b/accounts/templates/accounts/role_assign_form.html
@@ -2,8 +2,7 @@
 {% load static %}
 {% block title %}{{ title }}{% endblock %}
 {% block styles %}
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
-          rel="stylesheet" />
+    <link href="{% static 'vendor/select2/css/select2.min.css' %}" rel="stylesheet" />
     <style>
     .select2-container--default .select2-selection--multiple {
         border: 1px solid #d1d3e2;
@@ -99,7 +98,7 @@
     </div>
 {% endblock %}
 {% block scripts %}
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="{% static 'vendor/select2/js/select2.min.js' %}"></script>
     <script>
     $(document).ready(function() {
         $('.select2').select2({
