--- a/orders/templates/orders/order_form.html
+++ b/orders/templates/orders/order_form.html
@@ -3,10 +3,8 @@
 {% block title %}{{ title }} - نظام الخواجه{% endblock %}
 {% block extra_css %}
     <!-- Select2 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
-          rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.rtl.min.css"
-          rel="stylesheet" />
+    <link href="{% static 'vendor/select2/css/select2.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'vendor/select2/css/select2-bootstrap-5-theme.rtl.min.css' %}" rel="stylesheet" />
     <!-- تحسينات نموذج إضافة عناصر الطلب -->
     <link href="{% static 'css/order-form-enhanced.css' %}" rel="stylesheet" />
     <!-- تحسينات الهواتف المحمولة -->
@@ -815,7 +813,7 @@
     <!-- jQuery (مطلوب قبل Select2) -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <!-- Select2 JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="{% static 'vendor/select2/js/select2.min.js' %}"></script>
     <!-- SweetAlert2 للنوافذ المنبثقة -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- ملفات الجافاسكريبت المخصصة -->
