--- a/complaints/templates/complaints/admin_complaint_list.html
+++ b/complaints/templates/complaints/admin_complaint_list.html
@@ -2,8 +2,8 @@
 {% load static pagination_tags %}
 {% block title %}إدارة الشكاوى - وصول المدراء{% endblock %}
 {% block extra_css %}
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" rel="stylesheet">
+<link href="{% static 'vendor/select2/css/select2.min.css' %}" rel="stylesheet">
+<link href="{% static 'vendor/select2/css/select2-bootstrap-5-theme.min.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/complaints-module.css' %}?v={% now 'U' %}">
 {% endblock %}
 
@@ -98,7 +98,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="{% static 'vendor/select2/js/select2.min.js' %}"></script>
 <script>
 $(document).ready(function(){
     $('#filterForm select').each(function(){$(this).select2({theme:'bootstrap-5',placeholder:$(this).find('option:first').text()||'اختر...',allowClear:true,dir:'rtl'})});
