--- a/complaints/templates/complaints/complaint_form.html
+++ b/complaints/templates/complaints/complaint_form.html
@@ -2,8 +2,8 @@
 {% load static widget_tweaks %}
 {% block title %}{% if complaint %}تعديل {{ complaint.complaint_number }}{% else %}شكوى جديدة{% endif %} - نظام الخواجه{% endblock %}
 {% block extra_css %}
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.rtl.min.css" rel="stylesheet">
+<link href="{% static 'vendor/select2/css/select2.min.css' %}" rel="stylesheet">
+<link href="{% static 'vendor/select2/css/select2-bootstrap-5-theme.rtl.min.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/complaints-module.css' %}?v={% now 'U' %}">
 {% endblock %}
 
@@ -161,7 +161,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="{% static 'vendor/select2/js/select2.min.js' %}"></script>
 <script>
 function updateCustomerInfo(id){
     if(!id){$('#customer-info').hide();$('#no-customer-selected').show();return}
