--- a/complaints/templates/complaints/complaint_list.html
+++ b/complaints/templates/complaints/complaint_list.html
@@ -3,8 +3,8 @@
 {% block title %}قائمة الشكاوى - نظام الخواجه{% endblock %}
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/complaints-module.css' %}?v={% now 'U' %}">
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
-<link href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" rel="stylesheet"/>
+<link href="{% static 'vendor/select2/css/select2.min.css' %}" rel="stylesheet"/>
+<link href="{% static 'vendor/select2/css/select2-bootstrap-5-theme.min.css' %}" rel="stylesheet"/>
 {% endblock %}
 
 {% block content %}
@@ -201,7 +201,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="{% static 'vendor/select2/js/select2.min.js' %}"></script>
 <script>
 $(function(){
     // Select2 on filter fields
