--- a/inspections/templates/inspections/inspection_form.html
+++ b/inspections/templates/inspections/inspection_form.html
@@ -11,10 +11,8 @@
 {% endblock %}
 {% block extra_css %}
     <!-- Select2 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
-          rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.rtl.min.css"
-          rel="stylesheet" />
+    <link href="{% static 'vendor/select2/css/select2.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'vendor/select2/css/select2-bootstrap-5-theme.rtl.min.css' %}" rel="stylesheet" />
     <link rel="stylesheet"
           href="{% static 'inspections/css/google_drive.css' %}">
     <style>
@@ -535,7 +533,7 @@ border: 1px solid rgba(76, 175, 80, 0.2);
 {% endblock %}
 {% block extra_js %}
     <!-- Select2 JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="{% static 'vendor/select2/js/select2.min.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="{% static 'inspections/js/upload_status_checker.js' %}"></script>
     <script src="{% static 'inspections/js/inspection_form_enhanced.js' %}"></script>
