--- a/orders/templates/orders/wizard/step3_order_items.html
+++ b/orders/templates/orders/wizard/step3_order_items.html
@@ -214,10 +214,8 @@
 {% endblock %}
 {% block extra_css %}
     {{ block.super }}
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
-          rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.rtl.min.css"
-          rel="stylesheet" />
+    <link href="{% static 'vendor/select2/css/select2.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'vendor/select2/css/select2-bootstrap-5-theme.rtl.min.css' %}" rel="stylesheet" />
     <style>
 /* تحسينات Select2 للمنتجات */
 .select2-container {
@@ -351,7 +349,7 @@
 {% endblock %}
 {% block extra_js %}
     {{ block.super }}
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="{% static 'vendor/select2/js/select2.min.js' %}"></script>
     <script>
 $(document).ready(function() {
     console.log('تهيئة Select2 للبحث عن المنتجات في الويزارد...');
